ui/styles/matches.css
* {
    box-sizing: border-box;
    font-family: sans-serif;
    margin: 0;
    padding: 0;
    width: fit-content;
    scrollbar-color: #222222 #00000020;

}

html, body {
    width: 100%;
    height: 100%;
}

.main {
    display: flex;
    flex-direction: row; 
    justify-content: space-between;
    height: 100%;
    width: 100%;
}




#background {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
    object-fit: cover;
}


#team_list {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 3em;
    justify-content: center;
    align-items: center;
    height: 100%;
    padding: 3em;
    overflow-y: scroll;
}

.team_container {
    padding: 20px;
    width: 240px;
    position: relative;
    border: 1px solid #00000020;
    border-radius: 5px;
    color: black;
    background: white;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 5px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
    height: 325px;
}

.team_name, .skipped_player_text {
    width: 100%;
}

.average_rank, .average_rank_elo {
    margin-top: 5px;
}

.average_rank_text {
    margin-top: 10px;
}

.average_rank_text, .player_entry {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 100%;
}

.player_name, .average_rank_text {
    text-align: left;
}

.player_entry {
    width: 200px;
}

.player_name {
    width: 140px;
}

.average_rank_elo {
    width: 105px;
}

.average_rank_icon, .player_rank {
    width: 32px;
    margin-left: 5px;
}

.player_list {
    margin-top: 10px;
}

.team_background {
    width: 100%;
    margin-top: -100px;
    max-height: 192px;
}

.left_side {
    width: 75%;
    height: 100%;
    overflow-y: auto;
}

.right_side {
    flex: 1;
    background: #000000b2;
    height: 100%;
    display: flex;
    flex-direction: column;
    overflow-y: scroll;
}
.buttons_container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    grid-template-columns: 1fr;
}
.action_button {
    background: none;
    border: none;
    cursor: pointer;
    padding: 10px;
    margin: 10px;
}
.matches_container {
    width: 100%;
    margin-top: 20px;
    display: flex;
    flex-direction: column;
}
.match_entry {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: auto;
    padding: 10px;
    background-color: rgb(255, 255, 255);
    border-radius: 10px;
    margin: 20px;
    gap: 20px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);

}
.match_teams {
    display: flex;
    flex-direction: row;
    text-align: center;
    align-items: center;
    gap: 2dvw;
    margin-bottom: 12px;
    margin-top: 12px;
}
.match_team_logo {
    width: 60px;
    height: 60px;
    object-fit: contain;
    margin: 0 8px;
}
.match_score{
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 2dvw;
    font-size: 24px;
    font-weight: bold;
}
input.team1_score, input.team2_score {
    width: 122px;
    font-size: 24px;
    font-weight: bold;
    appearance: none;
    border: none;
    background: none;
    outline: none;
    box-shadow: none;
    text-align: center;
}

input.team2_score {
    padding-left: 21px;
}

::backdrop {
    background: rgba(0, 0, 0, 0.5);
}
#result_modal {
    border: none;
    border-radius: 10px;
    padding: 20px;
    width: 400px;
    background: white;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
#close_result_modal {
    position: absolute;
    top: 10px;
    right: 10px;
    font-size: 24px;
    cursor: pointer;
}
#results_container {
    margin-top: 30px;
    max-height: 400px;
    overflow-y: auto;
}
.winner_entry {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 10px;
    margin-bottom: 10px;
}

.team1, .team2 {
    width: 130px;
}

.separator {
    width: 22px;
    text-align: center;
}

.action_button {
    background-color: white;
    padding: 0;
}

.action_button img {
    height: 100%;
}

.buttons_container {
    width: 100%;
    height: fit-content;
    justify-content: center;
}


#clear_results_button {
    padding: 10px 20px;
    font-size: 16px;
    cursor: pointer;
    background-color: #4c56af;
    color: white;
    border: none;
    border-radius: 5px;
}

#clear_results_button:hover {
    background-color: #3b478a;
}

#close_result_modal {
    transition: color 0.2s;
}

#close_result_modal:hover {
    color: red;
}


.action_button:disabled {
    opacity: 0.8;
}


.action_button:hover {
    filter: brightness(0.8)
}

.player_count {
    background-color: #000000b2;
    color: white;
    padding: 10px;
    font-weight: bold;
    margin: 10px;
    height: fit-content;
}

